sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:7: error: reassignment to val
    i = i-1
      ^AlgInsertionSort:10: error: reassignment to val
      i = i-1
        ^