sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var n:Int = getNombreValeurs()
  var v:Int = 0
  for (i <- 1 to n-1) {
    v = getValeur(i)
    i = i-1
    while (i!=(-1) && (!plusPetitQue(i, v))) {
      setValeur(i+1,getValeur(i))
      i = i-1
    }
    setValeur(i,v)
  }
}